--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=/Users/paulacastellanos/Library/Application Support/NetBeans/7.3/config/GlassFishEE6/Properties/gfv3-926034999.properties
-j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="/Applications/NetBeans/glassfish-3.1.2.2/glassfish/lib/endorsed":"/Applications/NetBeans/glassfish-3.1.2.2/glassfish/modules/endorsed" -javaagent:"/Applications/NetBeans/glassfish-3.1.2.2/glassfish/lib/gf-client.jar"=mode=acscript,arg=-configxml,arg="/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1/config/sun-acc.xml",client=jar=
+deploy.ant.properties.file=C:\\Users\\xDEAMx\\AppData\\Roaming\\NetBeans\\7.3\\gfv3-909314372.properties
+j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\lib\\endorsed";"C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\modules\\endorsed" -javaagent:"C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\domains\\domain1\\config\\sun-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1
-j2ee.server.home=/Applications/NetBeans/glassfish-3.1.2.2/glassfish
-j2ee.server.instance=[/Applications/NetBeans/glassfish-3.1.2.2/glassfish:/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Applications/NetBeans/glassfish-3.1.2.2
-netbeans.user=/Users/paulacastellanos/Library/Application Support/NetBeans/7.3
-wa.copy.client.jar.from=/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1/generated/xml
+j2ee.server.domain=C:/Program Files/glassfish-3.1.2.2/glassfish/domains/domain1
+j2ee.server.home=C:/Program Files/glassfish-3.1.2.2/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-3.1.2.2\\glassfish;C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-3.1.2.2
+netbeans.user=C:\\Users\\xDEAMx\\AppData\\Roaming\\NetBeans\\7.3
+wa.copy.client.jar.from=C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\domains\\domain1\\generated\\xml
